# xanes_gui

./: .gitignore  .readthedocs.yaml  CURVE_DIRECTORIES.md  CURVE_SETUP.md  ENERGY_METHODS_README.md  LICENSE  MANIFEST.in  README.md  example_custom_energies.txt  launch_xanes_gui.sh  pyproject.toml  xanes_energy.py  xanes_energy_updated.py  xanes_gui.py
.claude/: .nfs0000000003fc028a000007cd  settings.local.json
Calibrated/: Co_calibrated.npy  Mn_calibrated.npy  Ni_calibrated.npy  Pt_calibrated.npy
Curves/: Ac.npy  Ag.npy  Al.npy  Ar.npy  As.npy  At.npy  Au.npy  B.npy  Ba.npy  Be.npy  Bi.npy  Br.npy  C.npy  Ca.npy  Cd.npy  Ce.npy  Cl.npy  Co.npy  Cr.npy  Cs.npy  Cu.npy  Dy.npy  Er.npy  Eu.npy  F.npy  Fe.npy  Fr.npy  Ga.npy  Gd.npy  Ge.npy  H.npy  He.npy  Hf.npy  Hg.npy  Ho.npy  I.npy  In.npy  Ir.npy  K.npy  Kr.npy  (+53 more)
Curves/xanes_data/: retrieve.py  xcurves.py
docs/source/: api.rst  changelog.rst  conf.py  configuration.rst  features.rst  index.rst  license.rst  quickstart.rst  troubleshooting.rst  user_guide.rst
xanes_gui/: gui.py  gui_2d.py
xanes_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
